--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <div class="menu-contact">
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="..images/icons.svg#icon-envelope"></use>
+              <use href="images/icons.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="nav-address">
               info@devstudio.com</a
@@ -47,7 +47,7 @@
           </div>
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="..images/icons.svg#icon-smartphone"></use>
+              <use href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+48111111111" class="nav-address"> +48 111 111 111</a>
           </div>
@@ -77,7 +77,7 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio1.jpg"
+                src="images/portolio1.jpg"
                 alt="Mockup strony internetowej"
                 width="370"
                 height="294"
@@ -87,7 +87,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio2.jpg"
+                src="images/portolio2.jpg"
                 alt="Steph Curry z Golden State Warriors blokuje gracza New Orlean Pelicans"
                 width="370"
                 height="294"
@@ -97,7 +97,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio3.jpg"
+                src="images/portolio3.jpg"
                 alt="Logo restauracji The Seafood"
                 width="370"
                 height="294"
@@ -107,7 +107,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio4.jpg"
+                src="images/portolio4.jpg"
                 alt="Czarne słuchawki nauszne"
                 width="370"
                 height="294"
@@ -117,7 +117,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio5.jpg"
+                src="images/portolio5.jpg"
                 alt="Projekt opakowań kartonowych"
                 width="370"
                 height="294"
@@ -127,7 +127,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio6.jpg"
+                src="images/portolio6.jpg"
                 alt="Mockup ciemnej strony internetowej"
                 width="370"
                 height="294"
@@ -137,7 +137,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio7.jpg"
+                src="images/portolio7.jpg"
                 alt="Otworzony magazyn ze zdjęciami i tekstem"
               />
               <h5 class="headline5">Magazyn Limited Edition</h5>
@@ -145,7 +145,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio8.jpg"
+                src="images/portolio8.jpg"
                 alt="Mockup metki cenowej"
                 width="370"
                 height="294"
@@ -155,7 +155,7 @@
             </li>
             <li class="portfolio-list-item">
               <img
-                src="..images/portolio9.jpg"
+                src="images/portolio9.jpg"
                 alt="Laptop z otwartą stroną internetową oraz ręce na klawiaturze"
                 width="370"
                 height="294"
@@ -183,16 +183,16 @@
           <p class="joinus">Dołącz do nas</p>
           <div>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="..images/icons.svg#icon-instagram"></use>
+              <use href="images/icons.svg#icon-instagram"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="..images/icons.svg#icon-twitter"></use>
+              <use href="images/icons.svg#icon-twitter"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="..images/icons.svg#icon-facebook"></use>
+              <use href="images/icons.svg#icon-facebook"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="..images/icons.svg#icon-linkedin"></use>
+              <use href="images/icons.svg#icon-linkedin"></use>
             </svg>
           </div>
         </div>
