--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-contact">
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="images/icons.svg#icon-envelope"></use>
+              <use xlink: href="images/icons.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="nav-address">
               info@devstudio.com</a
@@ -47,7 +47,7 @@
           </div>
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="images/icons.svg#icon-smartphone"></use>
+              <use xlink: href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+48111111111" class="nav-address"> +48 111 111 111</a>
           </div>
@@ -69,7 +69,7 @@
             <li class="list-lorem-ipsum-item">
               <figure class="advantages">
                 <svg class="advantages-icon" width="70" height="70">
-                  <use href="images/icons.svg#icon-antenna"></use>
+                  <use xlink: href="images/icons.svg#icon-antenna"></use>
                 </svg>
               </figure>
               <h4 class="headline4">LOREM IPSUM</h4>
@@ -81,7 +81,7 @@
             <li class="list-lorem-ipsum-item">
               <figure class="advantages">
                 <svg class="advantages-icon" width="70" height="70">
-                  <use href="images/icons.svg#icon-clock"></use>
+                  <use xlink: href="images/icons.svg#icon-clock"></use>
                 </svg>
               </figure>
               <h4 class="headline4">LOREM IPSUM</h4>
@@ -93,7 +93,7 @@
             <li class="list-lorem-ipsum-item">
               <figure class="advantages">
                 <svg class="advantages-icon" width="70" height="70">
-                  <use href="images/icons.svg#icon-diagram"></use>
+                  <use xlink: href="images/icons.svg#icon-diagram"></use>
                 </svg>
               </figure>
               <h4 class="headline4">LOREM IPSUM</h4>
@@ -105,7 +105,7 @@
             <li class="list-lorem-ipsum-item">
               <figure class="advantages">
                 <svg class="advantages-icon" width="70" height="70">
-                  <use href="images/icons.svg#icon-astronaut"></use>
+                  <use xlink: href="images/icons.svg#icon-astronaut"></use>
                 </svg>
               </figure>
               <h4 class="headline4">LOREM IPSUM</h4>
@@ -161,16 +161,16 @@
               <p>Product Designer</p>
               <div class="socialmedia">
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-instagram"></use>
+                  <use xlink: href="images/icons.svg#icon-instagram"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-twitter"></use>
+                  <use xlink: href="images/icons.svg#icon-twitter"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-facebook"></use>
+                  <use xlink: href="images/icons.svg#icon-facebook"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-linkedin"></use>
+                  <use xlink: href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </li>
@@ -185,16 +185,16 @@
               <p>Frontend Developer</p>
               <div class="socialmedia">
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-instagram"></use>
+                  <use xlink: href="images/icons.svg#icon-instagram"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-twitter"></use>
+                  <use xlink: href="images/icons.svg#icon-twitter"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-facebook"></use>
+                  <use xlink: href="images/icons.svg#icon-facebook"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-linkedin"></use>
+                  <use xlink: href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </li>
@@ -209,16 +209,16 @@
               <p>Marketing</p>
               <div class="socialmedia">
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-instagram"></use>
+                  <use xlink: href="images/icons.svg#icon-instagram"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-twitter"></use>
+                  <use xlink: href="images/icons.svg#icon-twitter"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-facebook"></use>
+                  <use xlink: href="images/icons.svg#icon-facebook"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-linkedin"></use>
+                  <use xlink: href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </li>
@@ -233,16 +233,16 @@
               <p>UI Designer</p>
               <div class="socialmedia">
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-instagram"></use>
+                  <use xlink: href="images/icons.svg#icon-instagram"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-twitter"></use>
+                  <use xlink: href="images/icons.svg#icon-twitter"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-facebook"></use>
+                  <use xlink: href="images/icons.svg#icon-facebook"></use>
                 </svg>
                 <svg class="socialmedia-icon" height="44" width="44">
-                  <use href="images/icons.svg#icon-linkedin"></use>
+                  <use xlink: href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </div>
             </li>
@@ -255,32 +255,32 @@
           <ul class="customers">
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo1"></use>
+                <use xlink: href="images/icons.svg#icon-logo1"></use>
               </svg>
             </li>
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo2"></use>
+                <use xlink: href="images/icons.svg#icon-logo2"></use>
               </svg>
             </li>
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo3"></use>
+                <use xlink: href="images/icons.svg#icon-logo3"></use>
               </svg>
             </li>
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo4"></use>
+                <use xlink: href="images/icons.svg#icon-logo4"></use>
               </svg>
             </li>
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo5"></use>
+                <use xlink: href="images/icons.svg#icon-logo5"></use>
               </svg>
             </li>
             <li class="customer">
               <svg class="customer-logo" height="60" width="106">
-                <use href="images/icons.svg#icon-logo6"></use>
+                <use xlink: href="images/icons.svg#icon-logo6"></use>
               </svg>
             </li>
           </ul>
@@ -303,16 +303,16 @@
           <p class="joinus">Dołącz do nas</p>
           <div>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-instagram"></use>
+              <use xlink: href="images/icons.svg#icon-instagram"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-twitter"></use>
+              <use xlink: href="images/icons.svg#icon-twitter"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-facebook"></use>
+              <use xlink: href="images/icons.svg#icon-facebook"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-linkedin"></use>
+              <use xlink: href="images/icons.svg#icon-linkedin"></use>
             </svg>
           </div>
         </div>
