--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <div class="menu-contact">
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="images/icons.svg#icon-envelope"></use>
+              <use xlink: href="images/icons.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="nav-address">
               info@devstudio.com</a
@@ -47,7 +47,7 @@
           </div>
           <div class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
-              <use href="images/icons.svg#icon-smartphone"></use>
+              <use xlink: href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+48111111111" class="nav-address"> +48 111 111 111</a>
           </div>
@@ -183,16 +183,16 @@
           <p class="joinus">Dołącz do nas</p>
           <div>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-instagram"></use>
+              <use xlink: href="images/icons.svg#icon-instagram"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-twitter"></use>
+              <use xlink: href="images/icons.svg#icon-twitter"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-facebook"></use>
+              <use xlink: href="images/icons.svg#icon-facebook"></use>
             </svg>
             <svg class="socialmedia-footer-icon" height="44" width="44">
-              <use href="images/icons.svg#icon-linkedin"></use>
+              <use xlink: href="images/icons.svg#icon-linkedin"></use>
             </svg>
           </div>
         </div>
