--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             </ul>
           </nav>
         </div>
-        <div class="menu-contact">
-          <div class="menu-contact-items">
+        <ul class="menu-contact">
+          <li class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
               <use xlink: href="images/icons.svg#icon-envelope"></use>
             </svg>
             <a href="mailto:info@devstudio.com" class="nav-address">
               info@devstudio.com</a
             >
-          </div>
-          <div class="menu-contact-items">
+            </li>
+          <li class="menu-contact-items">
             <svg class="menu-icon" width="16" height="16">
               <use xlink: href="images/icons.svg#icon-smartphone"></use>
             </svg>
             <a href="tel:+48111111111" class="nav-address"> +48 111 111 111</a>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
